ingress.yaml
Step 1: Apply the NGINX Ingress Controller manifest
kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.11.3/deploy/static/provider/cloud/deploy.yaml

(This will create the ingress-nginx namespace and all required resources.)

Step 2: Verify installation
kubectl get pods -n ingress-nginx

You should see pods like:

ingress-nginx-controller-xxxxxx   Running

Step 3: Get Service (external IP)
kubectl get svc -n ingress-nginx


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
  namespace: demo-apps
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: app.theimran.world
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: jenkins
                port:
                  number: 80
          - path: /nginx
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
